It turns out I was chasing a ghost with the extra white space to the right of the website. With the monitor at work I noticed that all the contents that were in <html> and <body> had a width of 1280px while the pseudo-body had a width of 1265px.  To make a long story short the scroll bar accounted for the extra space. Everything inside the pseudo-body had a scroll bar on the x-axis so the width was 1265px while everything else .i.e the custom navigation bar and the custom modal had no scroll bar on the x-axis  which meant they had a length of 1280px - the body and html were set to fill the screen. On IE11 the problem doesn't show because the scrollbar is transparent however I believe in Chrome and Firefox the contents of the pseudo-body didn't fall behind the scroll bar like it does in IE11. The issue had to be fixed by hiding the overflow on the x-axis on the body and html tags.

--- a/css/groud-frank-ie.css
+++ b/css/groud-frank-ie.css
@@ -2,17 +2,17 @@ html{
   position: relative;
   max-width: 100vw;
   height: auto;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 
 
 body{
     position: relative;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     height: auto;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 a{
@@ -268,8 +268,8 @@ transform: scale(1.05);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   height: 100%;
   max-height: 100%;
   position: fixed;
@@ -328,9 +328,8 @@ transform: scale(1.05);
 
 #pseudo-body{
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100%;
-  border: 3px solid red;
 }
 
 
@@ -1303,7 +1302,7 @@ transform: scale(1.05);
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  max-width: 100vw;
+  max-width: 100%;
   position: relative;
   padding-top: 40px;
   /* padding-bottom: 40px; */
@@ -1350,7 +1349,7 @@ transform: scale(1.05);
   justify-content: center;
   align-items: center;
   /* border: 1px solid black; */
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   padding: 100px;
   position: relative;
